[gd_scene load_steps=17 format=3 uid="uid://contact_dash_main"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_main"]
[ext_resource type="Script" path="res://scripts/hpar.gd" id="2_hpar"]
[ext_resource type="Script" path="res://scripts/web_bridge.gd" id="3_bridge"]
[ext_resource type="Texture2D" path="res://sprites/hpar/idle/frame_000.png" id="4_idle0"]
[ext_resource type="Texture2D" path="res://sprites/hpar/idle/frame_001.png" id="5_idle1"]
[ext_resource type="Texture2D" path="res://sprites/hpar/idle/frame_002.png" id="6_idle2"]
[ext_resource type="Texture2D" path="res://sprites/hpar/idle/frame_003.png" id="7_idle3"]
[ext_resource type="Texture2D" path="res://sprites/hpar/walk/frame_000.png" id="8_walk0"]
[ext_resource type="Texture2D" path="res://sprites/hpar/walk/frame_001.png" id="9_walk1"]
[ext_resource type="Texture2D" path="res://sprites/hpar/walk/frame_002.png" id="10_walk2"]
[ext_resource type="Texture2D" path="res://sprites/hpar/walk/frame_003.png" id="11_walk3"]
[ext_resource type="Texture2D" path="res://sprites/hpar/walk/frame_004.png" id="12_walk4"]
[ext_resource type="Texture2D" path="res://sprites/hpar/walk/frame_005.png" id="13_walk5"]

[sub_resource type="SpriteFrames" id="SpriteFrames_hpar"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_idle0")
}, {
"duration": 1.0,
"texture": ExtResource("5_idle1")
}, {
"duration": 1.0,
"texture": ExtResource("6_idle2")
}, {
"duration": 1.0,
"texture": ExtResource("7_idle3")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_walk0")
}, {
"duration": 1.0,
"texture": ExtResource("9_walk1")
}, {
"duration": 1.0,
"texture": ExtResource("10_walk2")
}, {
"duration": 1.0,
"texture": ExtResource("11_walk3")
}, {
"duration": 1.0,
"texture": ExtResource("12_walk4")
}, {
"duration": 1.0,
"texture": ExtResource("13_walk5")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_body"]
size = Vector2(14, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_catch"]
size = Vector2(32, 24)

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="Background" type="ColorRect" parent="."]
offset_right = 640.0
offset_bottom = 360.0
color = Color(0.1, 0.1, 0.18, 1)

[node name="EnvelopeContainer" type="Node2D" parent="."]

[node name="Hpar" type="CharacterBody2D" parent="."]
position = Vector2(320, 310)
script = ExtResource("2_hpar")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Hpar"]
sprite_frames = SubResource("SpriteFrames_hpar")
animation = &"idle"
autoplay = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hpar"]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_body")

[node name="CatchZone" type="Area2D" parent="Hpar"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hpar/CatchZone"]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_catch")

[node name="WispContainer" type="Node2D" parent="."]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="WebBridge" type="Node" parent="."]
script = ExtResource("3_bridge")
